👷 Fix Drone trigger

--- a/.drone.yml
+++ b/.drone.yml
@@ -18,8 +18,8 @@ steps:
       event:
         - push
       branch:
-        - master
+        - main
 
 trigger:
   branch:
-    - master
+    - main
